Code test coverage at 92% Added tests for JSRegExp and JSString Increased test coverage